--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -4,8 +4,21 @@ upstream app {
 }
 
 server {
-  listen 8088;
-  server_name localhost;
+  #SSL 默认访问端口号为 443
+  listen 443 ssl;
+  #请填写绑定证书的域名
+  server_name serve.yaunfei.top;
+  #请填写证书文件的相对路径或绝对路径
+  ssl_certificate yaunfei.top_nginx/yaunfei.top_bundle.crt;
+  #请填写私钥文件的相对路径或绝对路径
+  ssl_certificate_key yaunfei.top_nginx/yaunfei.top.key;
+  ssl_session_timeout 5m;
+  #请按照以下协议配置
+  ssl_protocols TLSv1.2 TLSv1.3;
+  #请按照以下套件配置，配置加密套件，写法遵循 openssl 标准。
+  ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE;
+  ssl_prefer_server_ciphers on;
+
 
   location /static/ {
     autoindex on;
