feat：上传对应域名的证书

--- a/config/nginx/default.conf
+++ b/config/nginx/default.conf
@@ -9,9 +9,9 @@ server {
   #请填写绑定证书的域名
   server_name serve.yaunfei.top;
   #请填写证书文件的相对路径或绝对路径
-  ssl_certificate yaunfei.top_nginx/yaunfei.top_bundle.crt;
+  ssl_certificate serve.yaunfei.top_nginx/serve.yaunfei.top_bundle.crt;
   #请填写私钥文件的相对路径或绝对路径
-  ssl_certificate_key yaunfei.top_nginx/yaunfei.top.key;
+  ssl_certificate_key serve.yaunfei.top_nginx/serve.yaunfei.top.key;
   ssl_session_timeout 5m;
   #请按照以下协议配置
   ssl_protocols TLSv1.2 TLSv1.3;
